--- a/src/index.html
+++ b/src/index.html
@@ -7,30 +7,32 @@
     <title>Leaderboard</title>
   </head>
   <body>
-    <main>
+    <main class="wrapper">
       <header>
-        <h1>Leaderboard</h1>
+        <h1 class="page-title">Leaderboard</h1>
       </header>
-      <section>
+      <section class="content">
         <div class="scores">
           <div class="title">
             <h2>Recent scores</h2>
             <button>Refresh</button>
           </div>
-          <ul>
-            <li>Name: 100</li>
-            <li>Name: 100</li>
-            <li>Name: 100</li>
-            <li>Name: 100</li>
-            <li>Name: 100</li>
+          <ul class="list">
+            <li class="list-item">Name: 100</li>
+            <li class="list-item">Name: 100</li>
+            <li class="list-item">Name: 100</li>
+            <li class="list-item">Name: 100</li>
+            <li class="list-item">Name: 100</li>
           </ul>
         </div>
         <div class="add-score">
-          <h2>Add your score</h2>
+          <h2 class="score-title">Add your score</h2>
           <form action="">
-            <input type="text" placeholder="Your name" />
-            <input type="text" placeholder="Your score" />
-            <input type="submit" value="submit" name="submit" />
+            <ul class="add-form">
+              <li><input type="text" placeholder="Your name" required /></li>
+              <li><input type="text" placeholder="Your score" required /></li>
+              <li class="submit-button"><input type="submit" value="submit" name="submit" /></li>
+            </ul>
           </form>
         </div>
       </section>
