--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="scores">
           <div class="title">
             <h2>Recent scores</h2>
-            <button>Refresh</button>
+            <button type="button">Refresh</button>
           </div>
           <ul class="list">
             <li class="list-item">Name: 100</li>
@@ -27,7 +27,7 @@
         </div>
         <div class="add-score">
           <h2 class="score-title">Add your score</h2>
-          <form action="">
+          <form action="#">
             <ul class="add-form">
               <li><input type="text" placeholder="Your name" required /></li>
               <li><input type="text" placeholder="Your score" required /></li>
