--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                 />
               </li>
               <li class="submit-button">
-                <input type="button" value="submit" name="submit" />
+                <input type="submit" value="submit" name="submit" />
               </li>
             </ul>
           </form>
